--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/material": "^16.0.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.2",
+    "@angular/router": "^16.0.3",
     "@angular/service-worker": "^16.0.2",
+    "add": "^2.0.6",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
