--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.3",
     "@angular/service-worker": "^16.0.2",
     "add": "^2.0.6",
+    "jwt-decode": "^3.1.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
