--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^16.0.3",
     "@angular/service-worker": "^16.0.2",
     "add": "^2.0.6",
+    "apexcharts": "^3.42.0",
+    "ng-apexcharts": "^1.8.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
