--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.0.1",
+    "@angular/material-moment-adapter": "^16.2.4",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.3",
     "@angular/service-worker": "^16.0.2",
     "add": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-mask": "^13.1.13",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
