--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@angular/router": "^16.0.3",
     "@angular/service-worker": "^16.0.2",
     "add": "^2.0.6",
+    "apexcharts": "^3.42.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "ng-apexcharts": "^1.8.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-mask": "^13.1.13",
     "normalize.css": "^8.0.1",
+    "randombytes": "^2.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
